[project]
name = "super-ml-pets"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "keyboard>=0.13.5",
    "numpy<=1.23.2",
    "opencv-python>=4.7.0.72",
    "pyautogui>=0.9.54",
    "pynput>=1.7.7",
    "sapai-gym",
    "sb3-contrib==1.8.0",
    "scikit-image>=0.24.0",
    "scikit-learn<=1.1",
    "setuptools==66",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
sapai-gym = { url = "https://github.com/andreped/sapai-gym/releases/download/v0.1.1/sapai_gym-0.1.1-py3-none-any.whl" }
