[project]
name = "super-ml-pets"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.5",
    "keyboard>=0.13.5",
    "opencv-python>=4.7.0.72",
    "pyautogui>=0.9.54",
    "pynput>=1.7.7",
    "pywinctl>=0.4.1",
    "rich>=13.9.4",
    "sapai-gym",
    "sb3-contrib==1.8.0",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.3",
    "setuptools==66",
    "tensorflow>=2.13.1",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
sapai-gym = { url = "https://github.com/andreped/sapai-gym/releases/download/v0.1.1/sapai_gym-0.1.1-py3-none-any.whl" }
